Advanced map search result list changes - application identifier as header - application name as normal info - new fields: applicant and address - removed application type since it is included in application identifier - fixed advanced search sidenav to hide outer scrollbar

--- a/frontend/src/app/feature/mapsearch/mapsearch.component.scss
+++ b/frontend/src/app/feature/mapsearch/mapsearch.component.scss
@@ -29,7 +29,8 @@ mat-sidenav {
   box-shadow: 0 2px 20px 0 #757575;
 }
 
-mat-sidenav.no-scroll {
+mat-sidenav.no-scroll,
+mat-sidenav.no-scroll .mat-drawer-inner-container {
   overflow-y: hidden;
 }
 
